--- a/paper/htp-amia.bib
+++ b/paper/htp-amia.bib
@@ -190,6 +190,14 @@
         Howpublished = {http://www.omg.org/spec/CTS2/1.0}
 }
 
+@Misc{specific_occurences,
+        title = {CLINICAL QUALITY MEASURE LOGIC AND IMPLEMENTATION GUIDANCE},
+        year = 2013,
+        mon = mar,
+        key = "specific_occurences2",
+        Howpublished = {http://projectcypress.org/documents/2014\_eCQM\_Specific\_Occurrence\_v14.pdf}
+}
+
 @incollection{tao2013phenotyping,
   title={Phenotyping on EHR data using OWL and semantic web technologies},
   author={Tao, Cui and Li, Dingcheng and Shen, Feichen and Lian, Zonghui and Pathak, Jyotishman and Liu, Hongfang and Chute, Christopher G},
@@ -197,4 +205,31 @@
   pages={31--32},
   year={2013},
   publisher={Springer}
+}
+
+@inproceedings{li2012modeling,
+  title={Modeling and executing electronic health records driven phenotyping algorithms using the NQF Quality Data Model and JBoss{\textregistered} Drools engine},
+  author={Li, Dingcheng and Endle, Cory M and Murthy, Sahana and Stancl, Craig and Suesse, Dale and Sottara, Davide and Huff, Stanley M and Chute, Christopher G and Pathak, Jyotishman},
+  booktitle={AMIA Annual Symposium Proceedings},
+  volume={2012},
+  pages={532},
+  year={2012},
+  organization={American Medical Informatics Association}
+}
+
+@article{ross2010analysis,
+  title={Analysis of eligibility criteria complexity in clinical trials},
+  author={Ross, Jessica and Tu, Samson and Carini, Simona and Sim, Ida},
+  journal={AMIA Summits on Translational Science Proceedings},
+  volume={2010},
+  pages={46},
+  year={2010},
+  publisher={American Medical Informatics Association}
+}
+
+@book{bali2013drools,
+  title={Drools JBoss Rules 5. X Developer's Guide},
+  author={Bali, Michal},
+  year={2013},
+  publisher={Packt Publishing Ltd}
 }
