--- a/paper/htp-amia.tex
+++ b/paper/htp-amia.tex
@@ -369,7 +369,7 @@ Complexity measurements for a selection of algorithms are shown in figure~\ref{f
 
 Execution times, shown in figure~\ref{fig:execution_time}, show the total elapsed time over the test patient sets.
 
-\begin{figure}[!htbp]
+\begin{figure}[H]
 \centering
 \begin{tikzpicture}
 \begin{axis}[
